--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ python:
   - "3.5"
   - "3.6"
 
-# command to run tests
+install:
+    - pip install -r requirements_dev.txt
+
 script:
     - pytest
 
