--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,10 @@ python:
   - "3.6"
 
 install:
-    - pip install -r requirements_dev.txt
+    - make install
 
 script:
-    - pytest
+    - make test
 
 notifications:
   email:
